io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/inconsistentredpayable2/Super.java
package io.hotmoka.examples.errors.inconsistentredpayable2;

import io.takamaka.code.lang.Contract;
import io.takamaka.code.lang.FromContract;

public class Super extends Contract {
	public @FromContract void m() {}
}